# obsctl

./: .gitignore  .gitlab-ci.yml  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Cross.toml  GITLAB_CI.md  MANUAL.md  README.md  SECURITY.md  docker-compose.ci.env  docker-compose.yml  justfile  release_config_test_report.json  rust-toolchain.toml  test_trace_enhanced.txt
.docker/: Dockerfile  loki-config.yaml  otel-collector-config.ci.yaml  otel-collector-config.yaml  prometheus.yml  promtail-config.yaml
.docker/grafana/: README.md  grafana.ini
.github/: dependabot.yml  release-please-config.json
.github/workflows/: README.md  branch-protection.yml  ci.yml  codeql.yml  conventional-commits.yml  dependabot-automerge.yml  main.yml  release-config-tests.yml  release-please.yml  release.yml
.gitlab/: sast-rules.yml  secure.yml
docs/: CROSS_COMPILATION_FIXES.md  CROSS_PLATFORM_SUPPORT.md  MANUAL.md  index.md
docs/adrs/: 0001-advanced-filtering-system.md  0002-pattern-matching-engine.md  0003-s3-universal-compatibility.md  0004-performance-optimization-strategy.md  0005-opentelemetry-implementation.md  0006-grafana-dashboard-architecture.md  0007-prometheus-jaeger-infrastructure.md  0008-release-management-strategy.md  0009-uuid-integration-testing.md  0010-docker-compose-architecture.md  0011-multi-platform-packaging.md  0012-documentation-architecture.md  README.md
packaging/: README.md  build-releases.sh  obsctl.1  obsctl.bash-completion  release-workflow.sh  upload_obs.bash-completion
packaging/chocolatey/: POWERSHELL_CONSIDERATIONS.md  README.md  chocolateyinstall.ps1.template  chocolateyuninstall.ps1.template  obsctl.nuspec.template
packaging/debian/: config  control  install  postinst  prerm
packaging/homebrew/: README.md  obsctl.rb  release-formula.sh  test-formula.sh  update-formula-shas.sh
packaging/rpm/: obsctl.spec
scripts/: README.md  com.obsctl.traffic-generator.plist  fix-clippy.sh  generate_traffic.py  test-cross-compilation.sh  test_dashboard_automation.sh  traffic_config.py  traffic_service.py
src/: args.rs  config.rs  filtering.rs  lib.rs  logging.rs  main.rs  otel.rs  upload.rs  utils.rs
src/commands/: bucket.rs  config.rs  (+11 more)
tasks/: ADVANCED_FILTERING.md  CLIPPY_PROGRESS.md  CROSS_PLATFORM_COMPILATION_PRD.md  FUSE_support.md  OBSCTL_DEFECTS.md  OBSCTL_DELETION_DEFECTS_PRD.md  OTEL_SDK_MIGRATION.md  OTEL_TASK.md  RELEASE_READINESS.md  TASKS.md  integration_variations.md  otel_issue.md
tests/: release_config_tests.py
(+16 files in other folders)
