[package]
name = "obsctl"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-s3 = "1"
aws-smithy-types-convert = "1"
aws-smithy-client = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
log = "0.4"
simplelog = "0.12"
walkdir = "2"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sd-notify = "0.4"
systemd-journal-logger = "2"
tempfile = "3"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
