[package]
name = "obsctl"
version = "0.2.0"
edition = "2021"
authors = ["obsctl Team"]
description = "High-performance S3-compatible CLI tool with OpenTelemetry observability"
license = "MIT"
homepage = "https://github.com/your-org/obsctl"
repository = "https://github.com/your-org/obsctl"
keywords = ["s3", "cloud", "storage", "cli", "observability"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
aws-config = "1.1.1"
aws-sdk-s3 = "1.13.0"
aws-smithy-types = "1.1.1"
aws-types = "1.1.1"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.0"
env_logger = "0.10"
futures = "0.3"
glob = "0.3"
indicatif = "0.17"
lazy_static = "1.4"
libc = "0.2"
log = "0.4"
opentelemetry = { version = "0.30", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic", "metrics", "trace"] }
opentelemetry_sdk = { version = "0.30", features = ["metrics", "trace"] }
opentelemetry-semantic-conventions = "0.30"
regex = "1.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
base64 = "0.21"
md5 = "0.7"
walkdir = "2.3"
thiserror = "1.0"

[target.'cfg(target_os = "linux")'.dependencies]
systemd-journal-logger = "2"
tempfile = "3"
sd-notify = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3.8"
